tests/out/t042astParser.dart
// $ANTLR 3.4 t042astParser.g 2012-06-07 21:59:43
#library('dart:dartlr');

#import('dart:io');
#import('../../src/DartLRLib.dart');

class t042astParser extends Parser {

  static final List<String> _tokenNames = const [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "CALL", "EXPR", "FIELD", 
    "FIELDACCESS", "FLOAT", "ID", "INDEX", "INT", "VARDEF", "VARIABLE", 
    "WS", "'('", "')'", "'+'", "','", "'.'", "':'", "';'", "'='", "'['", 
    "']'", "'assert'", "'bool'", "'class'", "'else'", "'extends'", "'foo28a'", 
    "'foo28b'", "'fooze'", "'fooze2'", "'for'", "'if'", "'implements'", 
    "'int'", "'private'", "'public'", "'return'", "'var'", "'while'", "'{'", 
    "'}'"
  ];

  static final int EOF = -1;
  static final int T__16 = 16;
  static final int T__17 = 17;
  static final int T__18 = 18;
  static final int T__19 = 19;
  static final int T__20 = 20;
  static final int T__21 = 21;
  static final int T__22 = 22;
  static final int T__23 = 23;
  static final int T__24 = 24;
  static final int T__25 = 25;
  static final int T__26 = 26;
  static final int T__27 = 27;
  static final int T__28 = 28;
  static final int T__29 = 29;
  static final int T__30 = 30;
  static final int T__31 = 31;
  static final int T__32 = 32;
  static final int T__33 = 33;
  static final int T__34 = 34;
  static final int T__35 = 35;
  static final int T__36 = 36;
  static final int T__37 = 37;
  static final int T__38 = 38;
  static final int T__39 = 39;
  static final int T__40 = 40;
  static final int T__41 = 41;
  static final int T__42 = 42;
  static final int T__43 = 43;
  static final int T__44 = 44;
  static final int T__45 = 45;
  static final int BLOCK = 4;
  static final int CALL = 5;
  static final int EXPR = 6;
  static final int FIELD = 7;
  static final int FIELDACCESS = 8;
  static final int FLOAT = 9;
  static final int ID = 10;
  static final int INDEX = 11;
  static final int INT = 12;
  static final int VARDEF = 13;
  static final int VARIABLE = 14;
  static final int WS = 15;
  
  List<Parser> get delegates() => <Parser>[]; 
  
      


  CommonTreeAdaptor _adaptor;


  t042astParser(TokenStream input) 
    : super.fromRecognizerSharedState(input, new RecognizerSharedState()) {
	  this._adaptor = new CommonTreeAdaptor();
  }



  t042astParser.fromRecognizerSharedState
    (TokenStream input, RecognizerSharedState state) 
      : super.fromRecognizerSharedState(input, state) {
    

	  this._adaptor = new CommonTreeAdaptor();
  }    

	void set treeAdaptor(TreeAdaptor adaptor) {
	  this._adaptor = adaptor;
	}

	TreeAdaptor get treeAdaptor() => this._adaptor;
	
  List<String> get tokenNames() => t042astParser._tokenNames;

  String get grammarFileName() => "t042ast.g";

  String getRecognizerClassName() => "t042astParser";


  int flag = -1;
  List map(List a, Function fn) {
    List r = new List();
    for (int i = 0; i < a.length; i++)
      r.add(fn(a[i]));
    return r;
  }


  // $ANTLR start "r1"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   30:1: r1 : INT ( '+' ^ INT )* ;*/
  t042astParser_r1_return r1() {
    t042astParser_r1_return retval = new t042astParser_r1_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token INT1 = null;
    Token char_literal2 = null;
    Token INT3 = null;

    Object INT1_tree=null;
    Object char_literal2_tree=null;
    Object INT3_tree=null;

    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       31:5: ( INT ( '+' ^ INT )* )*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       31:7: INT ( '+' ^ INT )**/
      {
      	root_0 = this._adaptor.nil();


      	INT1 = this.matchSymbol(this.input,
      	    INT,FOLLOW_INT_in_r1115); 
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0) {
      	INT1_tree = this._adaptor.createTreeNode(INT1);
      	this._adaptor.addChild(root_0, INT1_tree);
      	}

      	/* ../runtime/dart/tests/grammars/t042ast.g:
      	 31:11: ( '+' ^ INT )**/
      	loop1:
      	do {
      	  int alt1 = 2;
      	  int LA1_0 = this.input.LA(1);

      	  if((LA1_0 == 18/*18*/)) {
      	    alt1 = 1;
      	  }


      	  switch (alt1) {
      			case 1 :
      			  /* ../runtime/dart/tests/grammars/t042ast.g:
      			   31:12: '+' ^ INT*/
      			  {
      			  	char_literal2 = this.matchSymbol(this.input,
      			  	    18,FOLLOW_18_in_r1118); 
      			  	if(this.state.failed) 
      			  	  return retval;
      			  	if(this.state.backtracking == 0) {
      			  	char_literal2_tree = this._adaptor.createTreeNode(char_literal2);
      			  	root_0 = this._adaptor.becomeRoot(char_literal2_tree, root_0);
      			  	}

      			  	INT3 = this.matchSymbol(this.input,
      			  	    INT,FOLLOW_INT_in_r1121); 
      			  	if(this.state.failed) 
      			  	  return retval;
      			  	if(this.state.backtracking == 0) {
      			  	INT3_tree = this._adaptor.createTreeNode(INT3);
      			  	this._adaptor.addChild(root_0, INT3_tree);
      			  	}

      			  }
      			  break;

      			default :
      		    break loop1;
      	  }
      	} while(true);


      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r1"


  // $ANTLR start "r2"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   34:1: r2 : 'assert' ^x= expression ( ':' !y= expression )? ';' !;*/
  t042astParser_r2_return r2() {
    t042astParser_r2_return retval = new t042astParser_r2_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token string_literal4 = null;
    Token char_literal5 = null;
    Token char_literal6 = null;
    t042astParser_expression_return x =null;

    t042astParser_expression_return y =null;


    Object string_literal4_tree=null;
    Object char_literal5_tree=null;
    Object char_literal6_tree=null;

    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       35:5: ( 'assert' ^x= expression ( ':' !y= expression )? ';' !)*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       35:7: 'assert' ^x= expression ( ':' !y= expression )? ';' !*/
      {
      	root_0 = this._adaptor.nil();


      	string_literal4 = this.matchSymbol(this.input,
      	    26,FOLLOW_26_in_r2140); 
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0) {
      	string_literal4_tree = this._adaptor.createTreeNode(string_literal4);
      	root_0 = this._adaptor.becomeRoot(string_literal4_tree, root_0);
      	}

      	this.pushFollow(FOLLOW_expression_in_r2145);
      	x = this.expression();

      	this.state.fsp--;
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0)
      	  this._adaptor.addChild(root_0, x.tree);

      	/* ../runtime/dart/tests/grammars/t042ast.g:
      	 35:30: ( ':' !y= expression )?*/
      	int alt2 = 2;
      	int LA2_0 = this.input.LA(1);

      	if((LA2_0 == 21/*21*/)) {
      	  alt2 = 1;
      	}
      	switch (alt2) {
      	  case 1 :
      	    /* ../runtime/dart/tests/grammars/t042ast.g:
      	     35:31: ':' !y= expression*/
      	    {
      	    	char_literal5 = this.matchSymbol(this.input,
      	    	    21,FOLLOW_21_in_r2148); 
      	    	if(this.state.failed) 
      	    	  return retval;

      	    	this.pushFollow(FOLLOW_expression_in_r2153);
      	    	y = this.expression();

      	    	this.state.fsp--;
      	    	if(this.state.failed) 
      	    	  return retval;
      	    	if(this.state.backtracking == 0)
      	    	  this._adaptor.addChild(root_0, y.tree);

      	    }
      	    break;

      	}


      	char_literal6 = this.matchSymbol(this.input,
      	    22,FOLLOW_22_in_r2157); 
      	if(this.state.failed) 
      	  return retval;

      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r2"


  // $ANTLR start "r3"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   38:1: r3 : 'if' ^ expression s1= statement ( 'else' !s2= statement )? ;*/
  t042astParser_r3_return r3() {
    t042astParser_r3_return retval = new t042astParser_r3_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token string_literal7 = null;
    Token string_literal9 = null;
    t042astParser_statement_return s1 =null;

    t042astParser_statement_return s2 =null;

    t042astParser_expression_return expression8 =null;


    Object string_literal7_tree=null;
    Object string_literal9_tree=null;

    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       39:5: ( 'if' ^ expression s1= statement ( 'else' !s2= statement )? )*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       39:7: 'if' ^ expression s1= statement ( 'else' !s2= statement )?*/
      {
      	root_0 = this._adaptor.nil();


      	string_literal7 = this.matchSymbol(this.input,
      	    36,FOLLOW_36_in_r3175); 
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0) {
      	string_literal7_tree = this._adaptor.createTreeNode(string_literal7);
      	root_0 = this._adaptor.becomeRoot(string_literal7_tree, root_0);
      	}

      	this.pushFollow(FOLLOW_expression_in_r3178);
      	expression8 = this.expression();

      	this.state.fsp--;
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0)
      	  this._adaptor.addChild(root_0, expression8.tree);

      	this.pushFollow(FOLLOW_statement_in_r3182);
      	s1 = this.statement();

      	this.state.fsp--;
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0)
      	  this._adaptor.addChild(root_0, s1.tree);

      	/* ../runtime/dart/tests/grammars/t042ast.g:
      	 39:37: ( 'else' !s2= statement )?*/
      	int alt3 = 2;
      	int LA3_0 = this.input.LA(1);

      	if((LA3_0 == 29/*29*/)) {
      	  alt3 = 1;
      	}
      	switch (alt3) {
      	  case 1 :
      	    /* ../runtime/dart/tests/grammars/t042ast.g:
      	     39:38: 'else' !s2= statement*/
      	    {
      	    	string_literal9 = this.matchSymbol(this.input,
      	    	    29,FOLLOW_29_in_r3185); 
      	    	if(this.state.failed) 
      	    	  return retval;

      	    	this.pushFollow(FOLLOW_statement_in_r3190);
      	    	s2 = this.statement();

      	    	this.state.fsp--;
      	    	if(this.state.failed) 
      	    	  return retval;
      	    	if(this.state.backtracking == 0)
      	    	  this._adaptor.addChild(root_0, s2.tree);

      	    }
      	    break;

      	}


      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r3"


  // $ANTLR start "r4"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   42:1: r4 : 'while' ^ expression statement ;*/
  t042astParser_r4_return r4() {
    t042astParser_r4_return retval = new t042astParser_r4_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token string_literal10 = null;
    t042astParser_expression_return expression11 =null;

    t042astParser_statement_return statement12 =null;


    Object string_literal10_tree=null;

    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       43:5: ( 'while' ^ expression statement )*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       43:7: 'while' ^ expression statement*/
      {
      	root_0 = this._adaptor.nil();


      	string_literal10 = this.matchSymbol(this.input,
      	    43,FOLLOW_43_in_r4209); 
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0) {
      	string_literal10_tree = this._adaptor.createTreeNode(string_literal10);
      	root_0 = this._adaptor.becomeRoot(string_literal10_tree, root_0);
      	}

      	this.pushFollow(FOLLOW_expression_in_r4212);
      	expression11 = this.expression();

      	this.state.fsp--;
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0)
      	  this._adaptor.addChild(root_0, expression11.tree);

      	this.pushFollow(FOLLOW_statement_in_r4214);
      	statement12 = this.statement();

      	this.state.fsp--;
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0)
      	  this._adaptor.addChild(root_0, statement12.tree);

      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r4"


  // $ANTLR start "r5"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   46:1: r5 : 'return' ^ ( expression )? ';' !;*/
  t042astParser_r5_return r5() {
    t042astParser_r5_return retval = new t042astParser_r5_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token string_literal13 = null;
    Token char_literal15 = null;
    t042astParser_expression_return expression14 =null;


    Object string_literal13_tree=null;
    Object char_literal15_tree=null;

    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       47:5: ( 'return' ^ ( expression )? ';' !)*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       47:7: 'return' ^ ( expression )? ';' !*/
      {
      	root_0 = this._adaptor.nil();


      	string_literal13 = this.matchSymbol(this.input,
      	    41,FOLLOW_41_in_r5231); 
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0) {
      	string_literal13_tree = this._adaptor.createTreeNode(string_literal13);
      	root_0 = this._adaptor.becomeRoot(string_literal13_tree, root_0);
      	}

      	/* ../runtime/dart/tests/grammars/t042ast.g:
      	 47:17: ( expression )?*/
      	int alt4 = 2;
      	int LA4_0 = this.input.LA(1);

      	if((LA4_0 == 12/*INT*/)) {
      	  alt4 = 1;
      	}
      	switch (alt4) {
      	  case 1 :
      	    /* ../runtime/dart/tests/grammars/t042ast.g:
      	     47:17: expression*/
      	    {
      	    	this.pushFollow(FOLLOW_expression_in_r5234);
      	    	expression14 = this.expression();

      	    	this.state.fsp--;
      	    	if(this.state.failed) 
      	    	  return retval;
      	    	if(this.state.backtracking == 0)
      	    	  this._adaptor.addChild(root_0, expression14.tree);

      	    }
      	    break;

      	}


      	char_literal15 = this.matchSymbol(this.input,
      	    22,FOLLOW_22_in_r5237); 
      	if(this.state.failed) 
      	  return retval;

      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r5"


  // $ANTLR start "r6"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   50:1: r6 : ( INT | ID )+ ;*/
  t042astParser_r6_return r6() {
    t042astParser_r6_return retval = new t042astParser_r6_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token set16 = null;

    Object set16_tree=null;

    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       51:5: ( ( INT | ID )+ )*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       51:7: ( INT | ID )+*/
      {
      	root_0 = this._adaptor.nil();


      	/* ../runtime/dart/tests/grammars/t042ast.g:
      	 51:7: ( INT | ID )+*/
      	int cnt5 = 0;
      	loop5:
      	do {
      	  int alt5 = 2;
      	  int LA5_0 = this.input.LA(1);

      	  if((LA5_0 == 10/*ID*/
      	    || LA5_0 == 12/*INT*/)) {
      	    alt5 = 1;
      	  }


      	  switch (alt5) {
      			case 1 :
      			  /* ../runtime/dart/tests/grammars/t042ast.g:
      			  */
      			  {
      			  	set16 = this.input.LT(1);

      			  	if(this.input.LA(1) == ID
      			  	  || this.input.LA(1) == INT) {
      			  	  this.input.consume();
      			  	  if(this.state.backtracking == 0)
      			  	    this._adaptor.addChild(root_0, this._adaptor.createTreeNode(set16));
      			  	  this.state.errorRecovery = false;
      			  	  this.state.failed = false;
      			  	}
      			  	else {
      			  	  if(this.state.backtracking > 0) {
      			  	    this.state.failed = true; 
      			  	    return retval;
      			  	  }
      			  	  MismatchedSetException mse = new MismatchedSetException(null,this.input);
      			  	  throw mse;
      			  	}


      			  }
      			  break;

      			default :
      		    if(cnt5 >= 1) break loop5;
      		      if(this.state.backtracking > 0) {
      		        this.state.failed = true; 
      		        return retval;
      		      }
      	        EarlyExitException eee = new EarlyExitException(5, this.input);
      	        throw eee;
      	  }
      	  cnt5++;
      	} while(true);


      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r6"


  // $ANTLR start "r7"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   54:1: r7 : INT ->;*/
  t042astParser_r7_return r7() {
    t042astParser_r7_return retval = new t042astParser_r7_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token INT17 = null;

    Object INT17_tree=null;
    RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(this._adaptor,"token INT");

    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       55:5: ( INT ->)*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       55:7: INT*/
      {
      	INT17 = this.matchSymbol(this.input,
      	    INT,FOLLOW_INT_in_r7277); 
      	if(this.state.failed) 
      	  return retval; 
      	if(this.state.backtracking == 0) stream_INT.add(INT17);


      	// AST REWRITE
      	// elements: 
      	// token labels: 
      	// rule labels: retval
      	// token list labels: 
      	// rule list labels: 
      	// wildcard labels: 
      	if(this.state.backtracking == 0) {

      	retval.tree = root_0;
      	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(this._adaptor,"rule retval",retval!=null?retval.tree:null);

      	root_0 = this._adaptor.nil();
      	/* 55:11: ->*/
      	{
      	    root_0 = null;
      	}


      	retval.tree = root_0;
      	}

      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r7"


  // $ANTLR start "r8"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   58:1: r8 : 'var' ID ':' type -> ^( 'var' type ID ) ;*/
  t042astParser_r8_return r8() {
    t042astParser_r8_return retval = new t042astParser_r8_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token string_literal18 = null;
    Token ID19 = null;
    Token char_literal20 = null;
    t042astParser_type_return type21 =null;


    Object string_literal18_tree=null;
    Object ID19_tree=null;
    Object char_literal20_tree=null;
    RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(this._adaptor,"token 21");
    RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(this._adaptor,"token 42");
    RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(this._adaptor,"token ID");
    RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(this._adaptor,"rule type");
    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       59:5: ( 'var' ID ':' type -> ^( 'var' type ID ) )*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       59:7: 'var' ID ':' type*/
      {
      	string_literal18 = this.matchSymbol(this.input,
      	    42,FOLLOW_42_in_r8297); 
      	if(this.state.failed) 
      	  return retval; 
      	if(this.state.backtracking == 0) stream_42.add(string_literal18);


      	ID19 = this.matchSymbol(this.input,
      	    ID,FOLLOW_ID_in_r8299); 
      	if(this.state.failed) 
      	  return retval; 
      	if(this.state.backtracking == 0) stream_ID.add(ID19);


      	char_literal20 = this.matchSymbol(this.input,
      	    21,FOLLOW_21_in_r8301); 
      	if(this.state.failed) 
      	  return retval; 
      	if(this.state.backtracking == 0) stream_21.add(char_literal20);


      	this.pushFollow(FOLLOW_type_in_r8303);
      	type21 = this.type();

      	this.state.fsp--;
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0) 
      	  stream_type.add(type21.tree);

      	// AST REWRITE
      	// elements: type, ID, 42
      	// token labels: 
      	// rule labels: retval
      	// token list labels: 
      	// rule list labels: 
      	// wildcard labels: 
      	if(this.state.backtracking == 0) {

      	retval.tree = root_0;
      	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(this._adaptor,"rule retval",retval!=null?retval.tree:null);

      	root_0 = this._adaptor.nil();
      	/* 59:25: -> ^( 'var' type ID )*/
      	{
      	    /* ../runtime/dart/tests/grammars/t042ast.g:
      	     59:28: ^( 'var' type ID )*/
      	    {
      	    	Object root_1 = this._adaptor.nil();
      	    	root_1 = this._adaptor.becomeRoot(
      	    	stream_42.nextNode()
      	    	, root_1);

      	    	this._adaptor.addChild(root_1, stream_type.nextTree());

      	    	this._adaptor.addChild(root_1, 
      	    	stream_ID.nextNode()
      	    	);

      	    	this._adaptor.addChild(root_0, root_1);
      	    }

      	}


      	retval.tree = root_0;
      	}

      }

      retval.stop = this.input.LT(-1);

      if(this.state.backtracking == 0) {

        retval.tree = this._adaptor.rulePostProcessing(root_0);
        this._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
      }
    }
    catch (RecognitionException re) {
      this.reportError(re);
      this.recover(re, this.input);
  	  retval.tree = this._adaptor.errorNode(input, retval.start, input.LT(-1), re);
    }

  	finally {
  	  // do for sure before leaving
  	}
  	return retval;
  }
  // $ANTLR end "r8"


  // $ANTLR start "r9"
  /* ../runtime/dart/tests/grammars/t042ast.g:
   62:1: r9 : type ID ';' -> ^( VARDEF type ID ) ;*/
  t042astParser_r9_return r9() {
    t042astParser_r9_return retval = new t042astParser_r9_return();
    retval.start = this.input.LT(1);


    Object root_0 = null;

    Token ID23 = null;
    Token char_literal24 = null;
    t042astParser_type_return type22 =null;


    Object ID23_tree=null;
    Object char_literal24_tree=null;
    RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(this._adaptor,"token ID");
    RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(this._adaptor,"token 22");
    RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(this._adaptor,"rule type");
    try {
      /* ../runtime/dart/tests/grammars/t042ast.g:
       63:5: ( type ID ';' -> ^( VARDEF type ID ) )*/
      /* ../runtime/dart/tests/grammars/t042ast.g:
       63:7: type ID ';'*/
      {
      	this.pushFollow(FOLLOW_type_in_r9331);
      	type22 = this.type();

      	this.state.fsp--;
      	if(this.state.failed) 
      	  return retval;
      	if(this.state.backtracking == 0) 
      	  stream_type.add(type22.tree);

      	ID23 = this.matchSymbol(this.input,
      	    ID,FOLLOW_ID_in_r9333); 
      	if(this.state.failed) 
      	  return retval; 
      	if(this.state.backtracking == 0) stream_ID.add(ID23);

